# lzma-mt

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  test.yml
benchmark/: plot_results.py  results.db  results_large.db  results_preset5.db  run_benchmark.py
docs/: abbrev_long.bib  conf.py  index.rst  references.bib
docs/_ext/: cython_autoapi.py
docs/_static/styles/: my_theme.css
docs/_templates/: copyright.html
docs/_templates/autoapi/python/: class.rst
src/lzma_mt/: __init__.py  __init__.pyi  lzma.pxd  lzma_mt.pyx
tests/: test_bigmem.py  test_cpython_compat.py  test_inputbuf.py  test_lzma_mt.py  test_pickle.py
