[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "cython>=3.0.0",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "lzma_mt"
dynamic = ["version"]
description = "Multi-threaded LZMA/XZ compression via Cython wrapper around liblzma"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

keywords = [
    "lzma",
    "xz",
    "compression",
    "multithreaded",
    "cython",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: System :: Archiving :: Compression",
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
dev = [
    "lzma_mt[test]",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
version_file = "src/lzma_mt/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest {project}/tests -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
